fix: spacing

--- a/services/web-app/components/color-token-table/color-token-table.module.scss
+++ b/services/web-app/components/color-token-table/color-token-table.module.scss
@@ -13,6 +13,8 @@
 .color-token-table {
   display: flex;
   flex-direction: column;
+  margin-top: spacing.$spacing-07;
+  color: theme.$text-primary;
 }
 
 .theme-switcher {
@@ -26,13 +28,13 @@
   }
   @include breakpoint.breakpoint-down('md') {
     max-width: calc(100% - 16px);
-    margin-left: 0.5rem;
+    margin-left: spacing.$spacing-03;
   }
 }
 
 .theme-switcher::before {
   position: absolute;
-  top: -16px;
+  top: -(spacing.$spacing-05);
   left: 0;
   display: block;
   width: 100%;
@@ -43,7 +45,7 @@
 
 .theme-switcher--stuck {
   // adds box shadow once it hits scrolling content
-  box-shadow: 0 2px 6px 0 rgba(colors.$black-100, 0.2);
+  box-shadow: 0 2px 6px 0 rgba(colors.$gray-100, 0.2);
 }
 
 .color-token-value {
@@ -107,7 +109,7 @@
   }
 
   @include breakpoint.breakpoint('md') {
-    padding-right: 4rem;
+    padding-right: spacing.$spacing-10;
   }
 }
 
@@ -116,12 +118,12 @@
   color: theme.$text-primary;
 
   &:hover {
-    background-color: #e5e5e5;
+    background-color: theme.$background-hover;
   }
 }
 
 .theme-switcher :global(.cds--content-switcher-btn:not(:last-of-type))::after {
-  top: 12px;
+  top: spacing.$spacing-04;
   right: -1px;
   height: 24px;
 }
@@ -134,7 +136,7 @@
 
 .color-token-table table thead tr {
   display: flex;
-  border-bottom: 1px solid colors.$gray-20;
+  border-bottom: 1px solid theme.$border-subtle;
 
   @media all and (max-width: 580px) {
     display: none;
@@ -149,7 +151,7 @@
 .color-token-table table tbody tr {
   display: flex;
   min-height: 104px;
-  border-bottom: 1px solid colors.$gray-20;
+  border-bottom: 1px solid theme.$border-subtle;
 
   @media all and (max-width: 580px) {
     position: relative;
@@ -172,7 +174,7 @@
 }
 
 .color-token-table table tbody tr td:not(:last-child) {
-  border-right: 1px solid colors.$gray-20;
+  border-right: 1px solid theme.$border-subtle;
 }
 
 .color-token-table code {
